// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`4635.scss - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================

@mixin placeholder {
  &::placeholder {@content}
}

.container {
  @include placeholder {
    color: $color-silver;
  }
}

=====================================output=====================================
@mixin placeholder {
  &::placeholder {
    @content;
  }
}

.container {
  @include placeholder {
    color: $color-silver;
  }
}

================================================================================
`;

exports[`4635.scss - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================

@mixin placeholder {
  &::placeholder {@content}
}

.container {
  @include placeholder {
    color: $color-silver;
  }
}

=====================================output=====================================
@mixin placeholder {
  &::placeholder {
    @content;
  }
}

.container {
  @include placeholder {
    color: $color-silver;
  }
}

================================================================================
`;

exports[`5208.scss - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
// Ignore escape "\\" in SCSS mixins
@mixin margin-bottom-1\\/3 {
  margin-bottom: 0.8rem;
}

label {
  @include margin-bottom-1\\/3;
}

=====================================output=====================================
// Ignore escape "\\" in SCSS mixins
@mixin margin-bottom-1\\/3 {
  margin-bottom: 0.8rem;
}

label {
  @include margin-bottom-1\\/3;
}

================================================================================
`;

exports[`5208.scss - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
// Ignore escape "\\" in SCSS mixins
@mixin margin-bottom-1\\/3 {
  margin-bottom: 0.8rem;
}

label {
  @include margin-bottom-1\\/3;
}

=====================================output=====================================
// Ignore escape "\\" in SCSS mixins
@mixin margin-bottom-1\\/3 {
  margin-bottom: 0.8rem;
}

label {
  @include margin-bottom-1\\/3;
}

================================================================================
`;

exports[`5636.scss - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
.foo {
  @include transition(min-height ($spacer/2) ease-in-out);
}

.bar {
  @include transition(min-height, $spacer/2, ease-in-out);
}

=====================================output=====================================
.foo {
  @include transition(min-height ($spacer/2) ease-in-out);
}

.bar {
  @include transition(min-height, $spacer/2, ease-in-out);
}

================================================================================
`;

exports[`5636.scss - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["scss"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
.foo {
  @include transition(min-height ($spacer/2) ease-in-out);
}

.bar {
  @include transition(min-height, $spacer/2, ease-in-out);
}

=====================================output=====================================
.foo {
  @include transition(min-height ($spacer/2) ease-in-out);
}

.bar {
  @include transition(min-height, $spacer/2, ease-in-out);
}

================================================================================
`;
